--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,12 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
-  <display-name>biningMallproject</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/javaee"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	id="WebApp_ID" version="2.5">
+	<display-name>biningMallproject</display-name>
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
+	
+	<error-page>
+  	<exception-type>java.lang.Exception</exception-type>
+  	<location>/errors/error_500.jsp</location>
+  </error-page>
+  
+  <error-page>
+  	<error-code>404</error-code>
+  	<location>/errors/error_404.jsp</location>
+  </error-page>
+	
+	<!-- 모든 웹 클라이언트 요청에 대한 단일(메인) 진입점(프론트 컨트롤러) 서블릿 등록 -->
+	<servlet>
+		<servlet-name>frontController</servlet-name>
+		<servlet-class>kr.or.kosta.shopping.common.controller.FrontControllerServlet</servlet-class>
+		<init-param>
+			<param-name>controllerMapping</param-name>
+			<param-value>I:/KOSTA100/workspace/Model2Study/WebContent/WEB-INF/controllerMapping.properties</param-value>
+		</init-param>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>frontController</servlet-name>
+		<!-- 단일진입점을 위한 서블릿 매핑 -->
+		<!-- 확장자 형식의 서블릿 매핑 -->
+		<url-pattern>*.mall</url-pattern>
+		<!-- URI PATH 형식의 서블릿 매핑 -->
+		<!--<url-pattern>/app/*</url-pattern> -->
+	</servlet-mapping>
+
 </web-app>
