공지 리스트 jsp 레이아웃 후, 커밋

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//WebContent/notice/notice.jsp=UTF-8
 encoding//src/kr/or/kosta/example/Log4JExample.java=UTF-8
 encoding/WebContent=UTF-8
 encoding/src=UTF-8
