--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -2,7 +2,7 @@
 # \uc138\ubd80 \ucee8\ud2b8\ub864\ub7ec\ub4e4\uc744 \ubaa8\ub450 \uc774\uacf3\uc5d0 \ub4f1\ub85d\ud55c\ub2e4. 
 
 # \uba54\uc778 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
-/index=kr.or.kosta.shopping.main.controller.MainController
+/index=kr.or.kosta.shopping.main.controller.IndexController
 
 # \ud68c\uc6d0\uad00\ub9ac \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
 /user/registProc=kr.or.kosta.shopping.member.controller.MemberRegistController
