공지사항 관련 하여 src 부분 dao 작업 진행 하던 것. insert 메소드 까지 만듬

--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -6,3 +6,6 @@
 
 # \ud68c\uc6d0\uad00\ub9ac \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
 /user/registProc=kr.or.kosta.shopping.member.controller.MemberRegistController
+
+# \uacf5\uc9c0\uc0ac\ud56d \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
+/notice/noticeRegistProc= kr.or.kosta.shopping.notice.controller.NoticeRegistController
