경로 설정 중 커밋

--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -7,8 +7,13 @@
 # \ud68c\uc6d0\uad00\ub9ac \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
 /user/registProc=kr.or.kosta.shopping.member.controller.MemberRegistController
 
+/user/login = kr.or.kosta.shopping.member.controller.MemberLoginController
+
 # \uacf5\uc9c0\uc0ac\ud56d \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
 /notice/noticeRegistProc= kr.or.kosta.shopping.notice.controller.NoticeRegistController
 
 # \uacf5\uc9c0\uc0ac\ud56d\ub9ac\uc2a4\ud2b8 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
-/notice= kr.or.kosta.shopping.notice.controller.NoticeController
+/notice/notice= kr.or.kosta.shopping.notice.controller.NoticeController
+
+#\uc0c1\ud488  \ub9ac\uc2a4\ud2b8 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
+/product/product_list_berger =kr.or.kosta.shopping.product.controller.ProductController
