--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -5,8 +5,9 @@
 /index=kr.or.kosta.shopping.main.controller.IndexController
 
 # \ud68c\uc6d0\uad00\ub9ac \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
-/user/registProc=kr.or.kosta.shopping.member.controller.MemberRegistController
+/user/registProc= kr.or.kosta.shopping.member.controller.MemberRegistController
 
+# \ud68c\uc6d0\uad00\ub9ac \ub85c\uadf8\uc778 \ub4f1\ub85d
 /user/login = kr.or.kosta.shopping.member.controller.MemberLoginController
 
 # \uacf5\uc9c0\uc0ac\ud56d \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
@@ -14,6 +15,12 @@
 
 # \uacf5\uc9c0\uc0ac\ud56d\ub9ac\uc2a4\ud2b8 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
 /notice/notice= kr.or.kosta.shopping.notice.controller.NoticeController
+
+# \uacf5\uc9c0\uc0ac\ud56d \uae00 \uc77d\uae30 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
+/notice/notice_read= kr.or.kosta.shopping.notice.controller.NoticeReadController
+
+# \uacf5\uc9c0\uc0ac\ud56d \uae00 \uc4f0\uae30 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
+/notice/notice_write = kr.or.kosta.shopping.notice.controller.NoticeWriteController
 
 #\uc0c1\ud488  \ub9ac\uc2a4\ud2b8 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
 /product/product_list_berger =kr.or.kosta.shopping.product.controller.ProductController
