--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -14,7 +14,7 @@
 /notice/noticeRegistProc= kr.or.kosta.shopping.notice.controller.NoticeRegistController
 
 # \uacf5\uc9c0\uc0ac\ud56d\ub9ac\uc2a4\ud2b8 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
-/notice/notice= kr.or.kosta.shopping.notice.controller.NoticeController
+/notice/notice= kr.or.kosta.shopping.notice.controller.NoticeListController
 
 # \uacf5\uc9c0\uc0ac\ud56d \uae00 \uc77d\uae30 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
 /notice/notice_read= kr.or.kosta.shopping.notice.controller.NoticeReadController
@@ -23,4 +23,7 @@
 /notice/notice_write = kr.or.kosta.shopping.notice.controller.NoticeWriteController
 
 #\uc0c1\ud488  \ub9ac\uc2a4\ud2b8 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
-/product/product_list_berger =kr.or.kosta.shopping.product.controller.ProductController
+/product/product_list_berger =kr.or.kosta.shopping.product.controller.ProductListController
+
+#\uc0c1\ud488 \uc0c1\uc138\ubcf4\uae30 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
+/product/product_view=kr.or.kosta.shopping.product.controller.ProductViewController
