member 부분 경로 정리 완료!

--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -8,13 +8,19 @@
 /user/registProc= kr.or.kosta.shopping.member.controller.MemberRegistController
 
 # \ud68c\uc6d0\uad00\ub9ac \ub85c\uadf8\uc778 \ub4f1\ub85d
-/user/login = kr.or.kosta.shopping.member.controller.MemberLoginController
+/user/login = kr.or.kosta.shopping.member.controller.MemberLoginViewController
+
+# \ud68c\uc6d0\uad00\ub9ac \ud68c\uc6d0\uac00\uc785 \ub4f1\ub85d
+/user/regist = kr.or.kosta.shopping.member.controller.MemberJoinViewController
+
+# \ud68c\uc6d0\uad00\ub9ac ID/PW \ucc3e\uae30 \ub4f1\ub85d
+/user/userinforsearch = kr.or.kosta.shopping.member.controller.MemberUserInfoSearchController
 
 # \uacf5\uc9c0\uc0ac\ud56d \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
 /notice/noticeRegistProc= kr.or.kosta.shopping.notice.controller.NoticeRegistController
 
 # \uacf5\uc9c0\uc0ac\ud56d\ub9ac\uc2a4\ud2b8 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
-/notice/notice= kr.or.kosta.shopping.notice.controller.NoticeListController
+/notice/notice_list= kr.or.kosta.shopping.notice.controller.NoticeListController
 
 # \uacf5\uc9c0\uc0ac\ud56d \uae00 \uc77d\uae30 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
 /notice/notice_read= kr.or.kosta.shopping.notice.controller.NoticeReadController
@@ -22,7 +28,7 @@
 # \uacf5\uc9c0\uc0ac\ud56d \uae00 \uc4f0\uae30 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
 /notice/notice_write = kr.or.kosta.shopping.notice.controller.NoticeWriteController
 
-#\uc0c1\ud488  \ub9ac\uc2a4\ud2b8 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
+#\uc0c1\ud488 \ub9ac\uc2a4\ud2b8 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
 /product/product_list_berger =kr.or.kosta.shopping.product.controller.ProductListController
 
 #\uc0c1\ud488 \uc0c1\uc138\ubcf4\uae30 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
