--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -33,3 +33,16 @@
 
 #\uc0c1\ud488 \uc0c1\uc138\ubcf4\uae30 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
 /product/product_view=kr.or.kosta.shopping.product.controller.ProductViewController
+
+#\ud1a0\ud551 \ubcf4\uae30 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
+/product/topping_list=kr.or.kosta.shopping.topping.controller.ToppingListController
+
+#\ube48\uc2a4 \uc18c\uac1c \ud654\uba74 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d 
+/menus/intro=kr.or.kosta.shopping.intro.controller.IntroViewController
+
+#QnA\ub9ac\uc2a4\ud2b8 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d 
+/qna/qna_view = kr.or.kosta.shopping.qna.controller.QnaListController
+
+#QnA \uae00 \uc77d\uae30 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d 
+/qna/qna_read = kr.or.kosta.shopping.qna.controller.QnaReadController
+
