--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -16,6 +16,12 @@
 # \ud68c\uc6d0\uad00\ub9ac ID/PW \ucc3e\uae30 \ub4f1\ub85d
 /user/userinforsearch = kr.or.kosta.shopping.member.controller.MemberUserInfoSearchController
 
+# \ud68c\uc6d0\ub85c\uadf8\uc778
+/user/loginProc = kr.or.kosta.shopping.member.controller.MemberLoginController
+
+# \ud68c\uc6d0 \ub85c\uadf8\uc544\uc6c3
+/user/logout = kr.or.kosta.shopping.member.controller.MemberLogoutController
+
 # \uacf5\uc9c0\uc0ac\ud56d \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
 /notice/noticeRegistProc= kr.or.kosta.shopping.notice.controller.NoticeRegistController
 
