--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -33,3 +33,9 @@
 
 #\uc0c1\ud488 \uc0c1\uc138\ubcf4\uae30 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
 /product/product_view=kr.or.kosta.shopping.product.controller.ProductViewController
+
+#주문  등록
+/order/order =kr.or.kosta.shopping.order.controller.OrderSetOrderController
+
+#주문 확인
+/order/ordercheck=kr.or.kosta.shopping.order.controller.OrderGetOrderController
