--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//WebContent/WEB-INF/controllerMapping.properties=UTF-8
 encoding//WebContent/cart/cart.jsp=UTF-8
 encoding//WebContent/notice/notice_list.jsp=UTF-8
 encoding//src/kr/or/kosta/example/Log4JExample.java=UTF-8
