--- a/src/resource/config/db-config.properties
+++ b/src/resource/config/db-config.properties
@@ -2,4 +2,4 @@
 driver=oracle.jdbc.driver.OracleDriver
 url=jdbc:oracle:thin:@localhost:1521:ORCL
 username=sys as sysdba
-password=oracle
+password=rlacl15
