--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -10,6 +10,12 @@
 # \ud68c\uc6d0\uad00\ub9ac \ub85c\uadf8\uc778 \ub4f1\ub85d
 /user/login = kr.or.kosta.shopping.member.controller.MemberLoginViewController
 
+# \ud68c\uc6d0\uad00\ub9ac \ub85c\uadf8\uc778
+/user/loginProc = kr.or.kosta.shopping.member.controller.MemberLoginController
+
+# \ud68c\uc6d0\uad00\ub9ac \ub85c\uadf8\uc544\uc6c3
+/user/logout = kr.or.kosta.shopping.member.controller.MemberLogoutController
+
 # \ud68c\uc6d0\uad00\ub9ac \ud68c\uc6d0\uac00\uc785 \ub4f1\ub85d
 /user/regist = kr.or.kosta.shopping.member.controller.MemberJoinViewController
 
@@ -18,7 +24,6 @@
 
 # \uacf5\uc9c0\uc0ac\ud56d \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
 /notice/noticeRegistProc= kr.or.kosta.shopping.notice.controller.NoticeRegistController
-
 
 # \uacf5\uc9c0\uc0ac\ud56d \ub9ac\uc2a4\ud2b8 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
 /notice/notice_list= kr.or.kosta.shopping.notice.controller.NoticeListController
