order 부분 변경 등

--- a/src/resource/config/db-config.properties
+++ b/src/resource/config/db-config.properties
@@ -1,5 +1,5 @@
 #Database Connection Properties
 driver=oracle.jdbc.driver.OracleDriver
-url=jdbc:oracle:thin:@localhost:1521:ORCL
+url=jdbc:oracle:thin:@localhost:1521:XE
 username=sys as sysdba
 password=oracle
