안녕하세요

--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -55,3 +55,6 @@
 #\uc8fc\ubb38 \ud655\uc778
 /order/ordercheck=kr.or.kosta.shopping.order.controller.OrderGetOrderController
 
+#\uc0c1\ud488\ud3c9 \ub4f1\ub85d
+/product/commentRegistProc = kr.or.kosta.shopping.comment.controller.CommentRegistController
+
