--- a/src/resource/config/db-config.properties
+++ b/src/resource/config/db-config.properties
@@ -2,4 +2,6 @@
 driver=oracle.jdbc.driver.OracleDriver
 url=jdbc:oracle:thin:@localhost:1521:XE
 username=sys as sysdba
-password=rlacl15
+#password=rlacl15
+
+password=oracle
