--- a/src/resource/config/db-config.properties
+++ b/src/resource/config/db-config.properties
@@ -1,5 +1,14 @@
+#안상 디비
+##Database Connection Properties
+#driver=oracle.jdbc.driver.OracleDriver
+#url=jdbc:oracle:thin:@localhost:1521:ORCL
+#username=sys as sysdba
+#password=rlacl15
+
+#승호 디비
 #Database Connection Properties
 driver=oracle.jdbc.driver.OracleDriver
-url=jdbc:oracle:thin:@localhost:1521:ORCL
+url=jdbc:oracle:thin:@192.168.0.8:1521:XE
 username=sys as sysdba
-password=rlacl15
+#password=rlacl15
+password=oracle
