--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -61,3 +61,5 @@
 #\uc0c1\ud488\ud3c9 \ub4f1\ub85d
 /product/commentRegistProc = kr.or.kosta.shopping.comment.controller.CommentRegistController
 
+#\uc0c1\ud488 \uc0c1\ud488\ud3c9 \uc791\uc131\ud558\uae30 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d 
+/product/product_write= kr.or.kosta.shopping.product.controller.ProductWriteController
