공지사항 리스트 dao가져 오기 까지 다음 할걸 : 화면에 보여주기.

--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -40,6 +40,9 @@
 #\uc0c1\ud488 \uc0c1\uc138\ubcf4\uae30 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
 /product/product_view=kr.or.kosta.shopping.product.controller.ProductViewController
 
+#\uc0c1\ud488 \uc0c1\ud488\ud3c9 \uc791\uc131\ud558\uae30 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d 
+/product/product_write= kr.or.kosta.shopping.product.controller.ProductWriteController
+
 #\ud1a0\ud551 \ubcf4\uae30 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
 /product/topping_list=kr.or.kosta.shopping.topping.controller.ToppingListController
 
