--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -27,7 +27,7 @@
          <param-name>controllerMapping</param-name>
 
          <!-- 쓰레기네 -->
-         <param-value>C:/Users/KSH/Documents/카카오톡 받은 파일/biningMallProject/WebContent/WEB-INF/controllerMapping.properties</param-value>
+        <!-- <param-value>C:/Users/KSH/Documents/카카오톡 받은 파일/biningMallProject/WebContent/WEB-INF/controllerMapping.properties</param-value>-->
          
          <!-- 광용이꺼 -->
          <!--  <param-value>F:\biningMallproject\WebContent\WEB-INF\controllerMapping.properties</param-value>-->
@@ -36,7 +36,7 @@
          <!--  <param-value>D:/kosta100/workspace/biningMallproject/WebContent/WEB-INF/controllerMapping.properties</param-value>-->
          
          <!-- 비닝이꺼 -->
-         <!-- <param-value>C:/Users/JHB-PC/Desktop/KOSTA/project/biningMallproject/WebContent/WEB-INF/controllerMapping.properties</param-value> -->
+          <param-value>C:/Users/JHB-PC/Desktop/KOSTA/project/biningMallproject/WebContent/WEB-INF/controllerMapping.properties</param-value> 
       </init-param>
    </servlet>
 
