--- a/src/resource/config/db-config.properties
+++ b/src/resource/config/db-config.properties
@@ -1,15 +1,14 @@
-#안상 디비
-##Database Connection Properties
-#driver=oracle.jdbc.driver.OracleDriver
-#url=jdbc:oracle:thin:@localhost:1521:ORCL
-#username=sys as sysdba
-#password=rlacl15
-
-#승호 디비
+#\uc548\uc0c1 \ub514\ube44
 #Database Connection Properties
 driver=oracle.jdbc.driver.OracleDriver
-url=jdbc:oracle:thin:@192.168.0.8:1521:XE
+url=jdbc:oracle:thin:@localhost:1521:ORCL
 username=sys as sysdba
+password=rlacl15
+
+#\uc2b9\ud638 \ub514\ube44
+#Database Connection Properties
+#driver=oracle.jdbc.driver.OracleDriver
+#url=jdbc:oracle:thin:@192.168.0.8:1521:XE
+#username=sys as sysdba
 #password=rlacl15
-<<<<<<< HEAD
-password=oracle
+#password=oracle
