--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -16,6 +16,12 @@
 # \ud68c\uc6d0\uad00\ub9ac ID/PW \ucc3e\uae30 \ub4f1\ub85d
 /user/userinforsearch = kr.or.kosta.shopping.member.controller.MemberUserInfoSearchController
 
+# \ub85c\uadf8\uc778
+/user/loginProc = kr.or.kosta.shopping.member.controller.MemberLoginController
+
+# \ub85c\uadf8\uc544\uc6c3
+/user/logout = kr.or.kosta.shopping.member.controller.MemberLogoutController
+
 # \uacf5\uc9c0\uc0ac\ud56d \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
 /notice/noticeRegistProc= kr.or.kosta.shopping.notice.controller.NoticeRegistController
 
@@ -33,7 +39,6 @@
 
 #\uc0c1\ud488 \uc0c1\uc138\ubcf4\uae30 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
 /product/product_view=kr.or.kosta.shopping.product.controller.ProductViewController
-
 
 #\uc0c1\ud488 \uc0c1\ud488\ud3c9 \uc791\uc131\ud558\uae30 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d 
 /product/product_write= kr.or.kosta.shopping.product.controller.ProductWriteController
