QNA create/update

--- a/src/resource/config/db-config.properties
+++ b/src/resource/config/db-config.properties
@@ -1,5 +1,4 @@
 #\uc548\uc0c1 \ub514\ube44
-<<<<<<< HEAD
 #Database Connection Properties
 driver=oracle.jdbc.driver.OracleDriver
 url=jdbc:oracle:thin:@localhost:1521:ORCL
@@ -13,7 +12,6 @@ password=rlacl15
 #username=sys as sysdba
 #password=rlacl15
 #password=oracle
-=======
 ##Database Connection Properties
 #driver=oracle.jdbc.driver.OracleDriver
 #url=jdbc:oracle:thin:@localhost:1521:ORCL
@@ -23,18 +21,16 @@ password=rlacl15
 #\uc2b9\ud638 \ub514\ube44
 #Database Connection Properties
 driver=oracle.jdbc.driver.OracleDriver
-<<<<<<< HEAD
 url=jdbc:oracle:thin:@localhost:1521:XE
 username=SYS as sysdba
-password=hr
->>>>>>> c04bec0158a1b92d949bcaa4fb996e710ac7d746
-=======
-url=jdbc:oracle:thin:@192.168.0.8:1521:XE
-username=sys as sysdba
 password=oracle
+
+
+#url=jdbc:oracle:thin:@192.168.0.8:1521:XE
+#username=sys as sysdba
+#password=oracle
 
 #로컬 디비
 #url=jdbc:oracle:thin:@localhost:1521:XE
 #username=SYS as sysdba
 #password=hr
->>>>>>> db80f5fedb6fe35af41e7d51c527e4850d685a61
