--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -26,16 +26,16 @@
       <init-param>
          <param-name>controllerMapping</param-name>
 	     <!-- 쓰레기네 -->
-	     <!-- <param-value>C:/Users/KSH/Documents/카카오톡 받은 파일/biningMallProject/WebContent/WEB-INF/controllerMapping.properties</param-value>-->
+	   <param-value>C:/Users/KSH/Documents/카카오톡 받은 파일/biningMallProject/WebContent/WEB-INF/controllerMapping.properties</param-value>
          
          <!-- 광용이꺼 -->
-<<<<<<< HEAD
+
           <!-- <param-value>F:\biningMallproject\WebContent\WEB-INF\controllerMapping.properties</param-value> -->
          <!-- <param-value>F:\biningMallproject\WebContent\WEB-INF\controllerMapping.properties</param-value>-->
          <!-- <param-value>F:\biningMallproject\WebContent\WEB-INF\controllerMapping.properties</param-value> -->
-=======
-         <param-value>F:\biningMallproject\WebContent\WEB-INF\controllerMapping.properties</param-value>
->>>>>>> f0ff5c135a34cbee238619c040d7a5db5d91f603
+
+         <!--  <param-value>F:\biningMallproject\WebContent\WEB-INF\controllerMapping.properties</param-value>-->
+
          
          <!-- 안상이꺼 -->
          <!-- <param-value>D:/kosta100/workspace/biningMallproject/WebContent/WEB-INF/controllerMapping.properties</param-value> -->
@@ -44,11 +44,9 @@
          <!-- param-value>C:/Users/JHB-PC/Desktop/KOSTA/project/biningMallproject/WebContent/WEB-INF/controllerMapping.properties</param-value> -->
           
           <!-- 성후니 -->
-<<<<<<< HEAD
+
           <!-- <param-value>C:/Users/chean/Documents/git/biningMallproject/WebContent/WEB-INF/controllerMapping.properties</param-value> --> 
-=======
           <!-- <param-value>C:/Users/chean/Documents/git/biningMallproject/WebContent/WEB-INF/controllerMapping.properties</param-value> -->
->>>>>>> f0ff5c135a34cbee238619c040d7a5db5d91f603
       </init-param>
    </servlet>
 
