--- a/src/resource/config/db-config.properties
+++ b/src/resource/config/db-config.properties
@@ -1,13 +1,6 @@
-<<<<<<< HEAD
-=======
-#안상 디비
->>>>>>> 26feb5795ef1f8df13d37fb2bf16ec2a677243a3
+#\uc548\uc0c1 \ub514\ube44
 #Database Connection Properties
 driver=oracle.jdbc.driver.OracleDriver
 url=jdbc:oracle:thin:@localhost:1521:ORCL
 username=sys as sysdba
-<<<<<<< HEAD
 password=rlacl15
-=======
-password=hr
->>>>>>> 26feb5795ef1f8df13d37fb2bf16ec2a677243a3
