주문 작업중 가격 연산

--- a/src/resource/config/db-config.properties
+++ b/src/resource/config/db-config.properties
@@ -1,6 +1,6 @@
-#안상 디비
+#승호 디비
 #Database Connection Properties
 driver=oracle.jdbc.driver.OracleDriver
-url=jdbc:oracle:thin:@localhost:1521:ORCL
+url=jdbc:oracle:thin:@192.168.0.10:1521:XE
 username=sys as sysdba
-password=hr
+password=oracle
