--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -58,7 +58,7 @@
 #QnA 글 쓰기 컨트롤러 등록
 /qna/qna_write = kr.or.kosta.shopping.qna.controller.QnaWriteController
 
-# Qna 컨트롤러 등록
+# QnA 컨트롤러 등록
 /qna/qnaRegistProc= kr.or.kosta.shopping.qna.controller.QnaRegistController
 
 
