--- a/src/resource/config/db-config.properties
+++ b/src/resource/config/db-config.properties
@@ -1,10 +1,9 @@
-<<<<<<< HEAD
 #\uc548\uc0c1 \ub514\ube44
 #Database Connection Properties
-driver=oracle.jdbc.driver.OracleDriver
-url=jdbc:oracle:thin:@localhost:1521:ORCL
-username=sys as sysdba
-password=rlacl15
+#driver=oracle.jdbc.driver.OracleDriver
+#url=jdbc:oracle:thin:@localhost:1521:ORCL
+#username=sys as sysdba
+#password=rlacl15
 
 #\uc2b9\ud638 \ub514\ube44
 #Database Connection Properties
@@ -13,10 +12,8 @@ password=rlacl15
 #username=sys as sysdba
 #password=rlacl15
 #password=oracle
+
 ##Database Connection Properties
-=======
-#Database Connection Properties
->>>>>>> 85d25c13621475edc2cb56991571bcdb54385fd1
 #driver=oracle.jdbc.driver.OracleDriver
 #url=jdbc:oracle:thin:@localhost:1521:ORCL
 #username=sys as sysdba
@@ -27,7 +24,6 @@ password=rlacl15
 driver=oracle.jdbc.driver.OracleDriver
 url=jdbc:oracle:thin:@localhost:1521:XE
 username=SYS as sysdba
-<<<<<<< HEAD
 password=oracle
 
 
@@ -39,7 +35,3 @@ password=oracle
 #url=jdbc:oracle:thin:@localhost:1521:XE
 #username=SYS as sysdba
 #password=hr
-=======
-password=hr
-
->>>>>>> 85d25c13621475edc2cb56991571bcdb54385fd1
