--- a/src/resource/config/db-config.properties
+++ b/src/resource/config/db-config.properties
@@ -1,6 +1,6 @@
-#안상 디비
+#\uc548\uc0c1 \ub514\ube44
 #Database Connection Properties
 driver=oracle.jdbc.driver.OracleDriver
 url=jdbc:oracle:thin:@localhost:1521:ORCL
 username=sys as sysdba
-password=hr
+password=rlacl15
