--- a/src/resource/config/db-config.properties
+++ b/src/resource/config/db-config.properties
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 #\uc548\uc0c1 \ub514\ube44
 #Database Connection Properties
 #driver=oracle.jdbc.driver.OracleDriver
@@ -22,14 +22,20 @@
 
 #\uc2b9\ud638 \ub514\ube44
 #Database Connection Properties
-driver=oracle.jdbc.driver.OracleDriver
-url=jdbc:oracle:thin:@localhost:1521:XE
-username=SYS as sysdba
-=======
-#안상 디비
+#driver=oracle.jdbc.driver.OracleDriver
+#url=jdbc:oracle:thin:@localhost:1521:XE
+#username=SYS as sysdba
+
+#\uc548\uc0c1 \ub514\ube44
 #Database Connection Properties
 driver=oracle.jdbc.driver.OracleDriver
 url=jdbc:oracle:thin:@localhost:1521:ORCL
 username=sys as sysdba
->>>>>>> 04594b36b5858a1150e9a31f542b31bb7c0041e4
+password=hr
+
+#\ud604\ube48
+#Database Connection Properties
+driver=oracle.jdbc.driver.OracleDriver
+url=jdbc:oracle:thin:@localhost:1521:XE
+username=sys as sysdba
 password=hr
