--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -26,7 +26,6 @@
       <init-param>
          <param-name>controllerMapping</param-name>
 	     <!-- 쓰레기네 -->
-<<<<<<< HEAD
 	 	  <!-- <param-value>C:/Users/KSH/Documents/카카오톡 받은 파일/biningMallProject/WebContent/WEB-INF/controllerMapping.properties</param-value> -->
          
          <!-- 광용이꺼 -->
@@ -47,30 +46,21 @@
      <!-- 안상이꺼 -->
          <!-- <param-value>D:/kosta100/workspace/biningMallproject/WebContent/WEB-INF/controllerMapping.properties</param-value> -->
          
-=======
+
 	  <!--  <param-value>C:/Users/KSH/Documents/카카오톡 받은 파일/biningMallProject/WebContent/WEB-INF/controllerMapping.properties</param-value> -->
          
          <!-- 광용이꺼 -->
-        <param-value>F:\biningMallproject\WebContent\WEB-INF\controllerMapping.properties</param-value>
+      <!--    <param-value>F:\biningMallproject\WebContent\WEB-INF\controllerMapping.properties</param-value>-->
          
          <!-- 안상이꺼 -->
           <!-- <param-value>F:\biningMallproject\WebContent\WEB-INF\controllerMapping.properties</param-value> -->
->>>>>>> 04594b36b5858a1150e9a31f542b31bb7c0041e4
+
          <!-- 비닝이꺼 -->
-         <!-- <param-value>C:/Users/JHB-PC/Desktop/KOSTA/project/biningMallproject/WebContent/WEB-INF/controllerMapping.properties</param-value>  -->
+          <param-value>C:/Users/JHB-PC/Desktop/KOSTA/project/biningMallproject/WebContent/WEB-INF/controllerMapping.properties</param-value> 
           
           <!-- 성후니 -->
-<<<<<<< HEAD
-
-
           <!-- <param-value>C:/Users/chean/Documents/git/biningMallproject/WebContent/WEB-INF/controllerMapping.properties</param-value> --> 
-          <!-- <param-value>C:/Users/chean/Documents/git/biningMallproject/WebContent/WEB-INF/controllerMapping.properties</param-value> -->
 
-           <!-- <param-value>C:/Users/chean/Documents/git/biningMallproject/WebContent/WEB-INF/controllerMapping.properties</param-value> --> 
-         <!-- param-value>C:/Users/JHB-PC/Desktop/KOSTA/project/biningMallproject/WebContent/WEB-INF/controllerMapping.properties</param-value> -->
-=======
-          <!-- <param-value>C:/Users/chean/Documents/git/biningMallproject/WebContent/WEB-INF/controllerMapping.properties</param-value> -->
->>>>>>> 04594b36b5858a1150e9a31f542b31bb7c0041e4
 
       </init-param>
    </servlet>
