--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -62,11 +62,11 @@
 /qna/qnaRegistProc= kr.or.kosta.shopping.qna.controller.QnaRegistController
 
 
-#바로구매 버튼 클릭시 컨트롤러 등록
+#구매시 사용자 정보 가져오기
 /order/order =kr.or.kosta.shopping.order.controller.OrderGetInfoController
 
-#주문 확인
-/order/ordercheck=kr.or.kosta.shopping.order.controller.OrderGetOrderController
+#주문하기
+/order/orderCheck=kr.or.kosta.shopping.order.controller.OrderCheckController
 
 #상품평 등록
 /product/commentRegistProc = kr.or.kosta.shopping.comment.controller.CommentRegistController
