--- a/src/resource/config/db-config.properties
+++ b/src/resource/config/db-config.properties
@@ -2,5 +2,5 @@
 #Database Connection Properties
 driver=oracle.jdbc.driver.OracleDriver
 url=jdbc:oracle:thin:@localhost:1521:XE
-username=sys as sysdba
-password=hr
+username=SYS as sysdba
+password=oracle
