주문 작업중

--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -61,7 +61,6 @@
 # QnA 컨트롤러 등록
 /qna/qnaRegistProc= kr.or.kosta.shopping.qna.controller.QnaRegistController
 
-
 #구매시 사용자 정보 가져오기
 /order/order =kr.or.kosta.shopping.order.controller.OrderGetInfoController
 
@@ -72,4 +71,16 @@
 /product/commentRegistProc = kr.or.kosta.shopping.comment.controller.CommentRegistController
 
 #상품 상품평 작성하기 컨트롤러 등록 
+/product/product_write= kr.or.kosta.shopping.product.controller.ProductWriteController
+
+#\uce74\ud2b8 \ub9ac\uc2a4\ud2b8
+/cart/cartView= kr.or.kosta.shopping.cart.controller.CartViewController
+
+#\uce74\ud2b8\uc5d0 \uc0c1\ud488 \ucd94\uac00
+/cart/cartInsert= kr.or.kosta.shopping.cart.controller.CartInsertController
+
+#\ubaa8\ub4e0 \uce74\ud2b8 \uc0ad\uc81c
+/cart/cartAlldelete = kr.or.kosta.shopping.cart.controller.CartAllDeleteController
+
+#\uc0c1\ud488 \uc0c1\ud488\ud3c9 \uc791\uc131\ud558\uae30 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d 
 /product/product_write= kr.or.kosta.shopping.product.controller.ProductWriteController
