로그인 디자인 과 index 부분

--- a/src/resource/config/db-config.properties
+++ b/src/resource/config/db-config.properties
@@ -1,12 +1,7 @@
-#승호 디비
+#\uc2b9\ud638 \ub514\ube44
 #Database Connection Properties
 driver=oracle.jdbc.driver.OracleDriver
-<<<<<<< HEAD
 url=jdbc:oracle:thin:@localhost:1521:XE
 username=SYS as sysdba
-password=oracle
-=======
-url=jdbc:oracle:thin:@192.168.0.17:1521:XE
-username=sys as sysdba
-password=oracle
->>>>>>> f55e9760a881fbff6d86a30ac6547af5e7994bd4
+password=hr
+
