--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -26,9 +26,8 @@
       <init-param>
          <param-name>controllerMapping</param-name>
 	     <!-- 쓰레기네 -->
-<<<<<<< HEAD
 
-	     <param-value>C:/Users/KSH/Documents/카카오톡 받은 파일/biningMallProject/WebContent/WEB-INF/controllerMapping.properties</param-value>
+	     <!--  <param-value>C:/Users/KSH/Documents/카카오톡 받은 파일/biningMallProject/WebContent/WEB-INF/controllerMapping.properties</param-value> -->
          
          <!-- 광용이꺼 -->
 
@@ -39,24 +38,10 @@
 
 
          <!-- 비닝이꺼 -->
-       <!--     <param-value>C:/Users/JHB-PC/Desktop/KOSTA/project/biningMallproject/WebContent/WEB-INF/controllerMapping.properties</param-value>--> 
+        <param-value>C:/Users/JHB-PC/Desktop/KOSTA/project/biningMallproject/WebContent/WEB-INF/controllerMapping.properties</param-value>
           
           
           <!-- 성후니 -->
-
-=======
-	    <!--  <param-value>C:/Users/KSH/Documents/카카오톡 받은 파일/biningMallProject/WebContent/WEB-INF/controllerMapping.properties</param-value> -->
-         <!-- 광용이꺼 -->
-     	 <param-value>F:\biningMallproject\WebContent\WEB-INF\controllerMapping.properties</param-value>
-         
-         <!-- 안상이꺼 -->
-        <!--  <param-value>D:/kosta100/workspace/biningMallproject/WebContent/WEB-INF/controllerMapping.properties</param-value> -->
-        
-         <!-- 비닝이꺼 -->
-         <!-- <param-value>C:/Users/JHB-PC/Desktop/KOSTA/project/biningMallproject/WebContent/WEB-INF/controllerMapping.properties</param-value> --> 
-          
-          <!-- 성후니 -->
->>>>>>> f55e9760a881fbff6d86a30ac6547af5e7994bd4
           <!-- <param-value>C:/Users/chean/Documents/git/biningMallproject/WebContent/WEB-INF/controllerMapping.properties</param-value> -->
 
       </init-param>
