카트 주문관련 제외하고 완벽구현

--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -82,5 +82,8 @@
 #\ubaa8\ub4e0 \uce74\ud2b8 \uc0ad\uc81c
 /cart/cartAlldelete = kr.or.kosta.shopping.cart.controller.CartAllDeleteController
 
+#\uc120\ud0dd \uce74\ud2b8 \uc0ad\uc81c
+/cart/cartSeldelete = kr.or.kosta.shopping.cart.controller.CartSelDeleteController
+
 #\uc0c1\ud488 \uc0c1\ud488\ud3c9 \uc791\uc131\ud558\uae30 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d 
 /product/product_write= kr.or.kosta.shopping.product.controller.ProductWriteController
