--- a/src/resource/config/db-config.properties
+++ b/src/resource/config/db-config.properties
@@ -1,8 +1,7 @@
-
 #\uc2b9\ud638 \ub514\ube44
 #Database Connection Properties
 driver=oracle.jdbc.driver.OracleDriver
-url=jdbc:oracle:thin:@localhost:1521:XE
+url=jdbc:oracle:thin:@localhost:1521:ORCL
 username=SYS as sysdba
-password=hr
+password=rlacl15
 
