--- a/src/resource/config/db-config.properties
+++ b/src/resource/config/db-config.properties
@@ -1,11 +1,5 @@
-#\uc2b9\ud638 \ub514\ube44
 #Database Connection Properties
 driver=oracle.jdbc.driver.OracleDriver
-url=jdbc:oracle:thin:@localhost:1521:XE
+url=jdbc:oracle:thin:@localhost:1521:ORCL
 username=SYS as sysdba
-<<<<<<< HEAD
-password=hr
-
-=======
 password=rlacl15
->>>>>>> 3f2b34ec86dd166fada69fb087bd03f0e173e6d4
