현빈 회원가입 기능 완료후 커밋

--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -16,6 +16,12 @@
 # \ud68c\uc6d0\uad00\ub9ac ID/PW \ucc3e\uae30 \ub4f1\ub85d
 /user/userinforsearch = kr.or.kosta.shopping.member.controller.MemberUserInfoSearchController
 
+# \ud68c\uc6d0\uac00\uc785 \ud558\uae30 \uc544\uc774\ub514\uc911\ubcf5 \ud655\uc778 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d (\ub4f1\ub85d\uc77c : 2015.10.23 : 5\uc2dc)
+/user/MemberJoinIdChk = kr.or.kosta.shopping.member.controller.MemberJoinIdChkController
+
+# \ud68c\uc6d0\uac00\uc785 \ud558\uae30 \uc774\uba54\uc77c\uc911\ubcf5 \ud655\uc778 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d (\ub4f1\ub85d\uc77c : 2015.10.23 :\uc624\ud6c4 9\uc2dc)
+/user/MemberJoinEmailChk =kr.or.kosta.shopping.member.controller.MemberJoinEmailChkController
+
 # \ub85c\uadf8\uc778
 /user/loginProc = kr.or.kosta.shopping.member.controller.MemberLoginController
 
