--- a/src/resource/config/db-config.properties
+++ b/src/resource/config/db-config.properties
@@ -1,6 +1,6 @@
 #\uc2b9\ud638 \ub514\ube44
 #Database Connection Properties
 driver=oracle.jdbc.driver.OracleDriver
-url=jdbc:oracle:thin:@localhost:1521:ORCL
+url=jdbc:oracle:thin:@192.168.0.21:1521:XE
 username=SYS as sysdba
-password=rlacl15
+password=oracle
