--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,6 +4,7 @@ encoding//WebContent/cart/cart.jsp=UTF-8
 encoding//WebContent/menus/intro.jsp=UTF-8
 encoding//WebContent/notice/notice_list.jsp=UTF-8
 encoding//WebContent/order/order.jsp=UTF-8
+encoding//WebContent/user/searchResult.jsp=UTF-8
 encoding//src/kr/or/kosta/example/Log4JExample.java=UTF-8
 encoding//src/resource/config/db-config.properties=UTF-8
 encoding/WebContent=UTF-8
