--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -22,6 +22,12 @@
 # \ud68c\uc6d0\uac00\uc785 \ud558\uae30 \uc774\uba54\uc77c\uc911\ubcf5 \ud655\uc778 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d (\ub4f1\ub85d\uc77c : 2015.10.23 :\uc624\ud6c4 9\uc2dc)
 /user/MemberJoinEmailChk =kr.or.kosta.shopping.member.controller.MemberJoinEmailChkController
 
+# \ud68c\uc6d0\uc758 \uc544\uc774\ub514 \ucc3e\uae30 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
+/user/idsearch = kr.or.kosta.shopping.member.controller.MemberIdSearchController
+
+# \ud68c\uc6d0\uc758 \ube44\ubc00\ubc88\ud638 \ucc3e\uae30 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
+/user/passwdsearch = kr.or.kosta.shopping.member.controller.MemberPassSearchController
+
 # \ub85c\uadf8\uc778
 /user/loginProc = kr.or.kosta.shopping.member.controller.MemberLoginController
 
