--- a/src/resource/config/db-config.properties
+++ b/src/resource/config/db-config.properties
@@ -1,9 +1,5 @@
 #Database Connection Properties
 driver=oracle.jdbc.driver.OracleDriver
-<<<<<<< HEAD
-url=jdbc:oracle:thin:@localhost:1521:XE
-=======
-url=jdbc:oracle:thin:@192.168.0.21:1521:XE
->>>>>>> d0e0bb34dc32c1ba5a44cfc95287204b86f035c7
+url=jdbc:oracle:thin:@localhost:1521:ORCL
 username=SYS as sysdba
-password=oracle
+password=rlacl15
