마이페이지

--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -102,3 +102,12 @@
 
 #\uc0c1\ud488 \uc0c1\ud488\ud3c9 \uc791\uc131\ud558\uae30 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d 
 /product/product_write= kr.or.kosta.shopping.product.controller.ProductWriteController
+
+#\uac1c\uc778\uc815\ubcf4 \ucd9c\ub825
+/user/userInfo = kr.or.kosta.shopping.member.controller.MemberInfoViewController
+
+#\uac1c\uc778\uc815\ubcf4 \uc218\uc815
+/user/myEditInfo = kr.or.kosta.shopping.member.controller.MemberInfoEditViewController
+
+#\ub098\uc758 \ubc30\uc1a1 \ub0b4\uc5ed \ucd9c\ub825
+/user/myOrder = kr.or.kosta.shopping.member.controller.MemberOrderViewController
