오더리스트 구현 바로 전

--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -80,7 +80,7 @@
 /order/order =kr.or.kosta.shopping.order.controller.OrderGetInfoController
 
 #\uc8fc\ubb38\ud558\uae30
-/order/ordercheck=kr.or.kosta.shopping.order.controller.OrderCheckController
+/order/orderregist=kr.or.kosta.shopping.order.controller.OrderRegistController
 
 #\uc0c1\ud488\ud3c9 \ub4f1\ub85d
 /product/commentRegistProc = kr.or.kosta.shopping.comment.controller.CommentRegistController
