--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -104,10 +104,10 @@
 /product/product_write= kr.or.kosta.shopping.product.controller.ProductWriteController
 
 #\uac1c\uc778\uc815\ubcf4 \ucd9c\ub825
-/user/userInfo = kr.or.kosta.shopping.member.controller.MemberInfoViewController
+/user/myInfo = kr.or.kosta.shopping.member.controller.mypage.MemberInfoViewController
 
 #\uac1c\uc778\uc815\ubcf4 \uc218\uc815
-/user/myEditInfo = kr.or.kosta.shopping.member.controller.MemberInfoEditViewController
+/user/myEditInfo = kr.or.kosta.shopping.member.controller.mypage.MemberInfoEditViewController
 
 #\ub098\uc758 \ubc30\uc1a1 \ub0b4\uc5ed \ucd9c\ub825
-/user/myOrder = kr.or.kosta.shopping.member.controller.MemberOrderViewController
+/user/myOrder = kr.or.kosta.shopping.member.controller.mypage.MemberOrderViewController
