마이 페이지 작성중

--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -111,3 +111,9 @@
 
 #\ub098\uc758 \ubc30\uc1a1 \ub0b4\uc5ed \ucd9c\ub825
 /user/myOrder = kr.or.kosta.shopping.member.controller.mypage.MemberOrderViewController
+
+#\uac1c\uc778\uc815\ubcf4 \uc218\uc815\uc804 \ud328\uc2a4\uc6cc\ub4dc \uccb4\ud06c \ud654\uba74
+/user/myCheckPasswd = kr.or.kosta.shopping.member.controller.mypage.MemberCheckPasswdViewController
+
+#\uac1c\uc778\uc815\ubcf4 \uc218\uc815\uc804 \ud328\uc2a4\uc6cc\ub4dc \uccb4\ud06c
+/user/myCheckPasswdProc = kr.or.kosta.shopping.member.controller.mypage.MemberCheckPasswdController
