--- a/src/resource/config/db-config.properties
+++ b/src/resource/config/db-config.properties
@@ -1,5 +1,5 @@
 #Database Connection Properties
 driver=oracle.jdbc.driver.OracleDriver
-url=jdbc:oracle:thin:@localhost:1521:XE
+url=jdbc:oracle:thin:@localhost:1521:ORCL
 username=sys as sysdba
-password=oracle
+password=rlacl15
