마이 페이지 정보수정 SQL문만 적용하면 끝

--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -106,8 +106,11 @@
 #\uac1c\uc778\uc815\ubcf4 \ucd9c\ub825
 /user/myInfo = kr.or.kosta.shopping.member.controller.mypage.MemberInfoViewController
 
-#\uac1c\uc778\uc815\ubcf4 \uc218\uc815
+#\uac1c\uc778\uc815\ubcf4 \uc218\uc815 \ud654\uba74
 /user/myEditInfo = kr.or.kosta.shopping.member.controller.mypage.MemberInfoEditViewController
+
+#\uac1c\uc778\uc815\ubcf4 \uc218\uc815 
+/user/myEditInfoProc = kr.or.kosta.shopping.member.controller.mypage.MemberInfoEditController
 
 #\ub098\uc758 \ubc30\uc1a1 \ub0b4\uc5ed \ucd9c\ub825
 /user/myOrder = kr.or.kosta.shopping.member.controller.mypage.MemberOrderViewController
@@ -117,3 +120,4 @@
 
 #\uac1c\uc778\uc815\ubcf4 \uc218\uc815\uc804 \ud328\uc2a4\uc6cc\ub4dc \uccb4\ud06c
 /user/myCheckPasswdProc = kr.or.kosta.shopping.member.controller.mypage.MemberCheckPasswdController
+
