안상이 작업 소스 업로드

--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -37,6 +37,9 @@
 # \uacf5\uc9c0\uc0ac\ud56d \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
 /notice/noticeRegistProc= kr.or.kosta.shopping.notice.controller.NoticeRegistController
 
+# \uacf5\uc9c0\uc0ac\ud56d \uc218\uc815 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
+/notice/noticeModify= kr.or.kosta.shopping.notice.controller.NoticeModifyController
+
 # \uacf5\uc9c0\uc0ac\ud56d \ub9ac\uc2a4\ud2b8 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
 /notice/notice_list= kr.or.kosta.shopping.notice.controller.NoticeListController
 
@@ -79,8 +82,11 @@
 #\uad6c\ub9e4\uc2dc \uc0ac\uc6a9\uc790 \uc815\ubcf4 \uac00\uc838\uc624\uae30
 /order/order =kr.or.kosta.shopping.order.controller.OrderGetInfoController
 
-#\uc8fc\ubb38\ud558\uae30
+# \uc8fc\ubb38\ud558\uae30
 /order/orderregist=kr.or.kosta.shopping.order.controller.OrderRegistController
+
+# \uc0c1\uc138 \uc8fc\ubb38 \ubcf4\uae30
+/order/orderDetail=kr.or.kosta.shopping.order.controller.OrderDetailController
 
 #\uc0c1\ud488\ud3c9 \ub4f1\ub85d
 /product/commentRegistProc = kr.or.kosta.shopping.comment.controller.CommentRegistController
@@ -121,3 +127,5 @@
 #\uac1c\uc778\uc815\ubcf4 \uc218\uc815\uc804 \ud328\uc2a4\uc6cc\ub4dc \uccb4\ud06c
 /user/myCheckPasswdProc = kr.or.kosta.shopping.member.controller.mypage.MemberCheckPasswdController
 
+# \uac1c\uc778 \uc8fc\ubb38 \ub0b4\uc5ed \uc870\ud68c
+/user/orderListView = kr.or.kosta.shopping.orderlist.controller.OrderListViewController
