로그인 실패 화면 추가

--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -129,3 +129,6 @@
 
 # \uac1c\uc778 \uc8fc\ubb38 \ub0b4\uc5ed \uc870\ud68c
 /user/orderListView = kr.or.kosta.shopping.orderlist.controller.OrderListViewController
+
+#\ub85c\uadf8\uc778 \uc2e4\ud328 \ud654\uba74
+/user/loginError = kr.or.kosta.shopping.member.controller.MemberLoginErrorViewController
