공지사항 삭제 컨트롤러 등록

--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -49,6 +49,9 @@
 # \uacf5\uc9c0\uc0ac\ud56d \uae00 \uc4f0\uae30 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
 /notice/notice_write = kr.or.kosta.shopping.notice.controller.NoticeWriteController
 
+# \uacf5\uc9c0\uc0ac\ud56d \uae00 \uc0ad\uc81c \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d 
+/notice/notice_delete = kr.or.kosta.shopping.notice.controller.NoticeDeleteController
+
 #\uc0c1\ud488 \ub9ac\uc2a4\ud2b8 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
 /product/product_list_berger =kr.or.kosta.shopping.product.controller.ProductListController
 
