--- a/src/resource/config/db-config.properties
+++ b/src/resource/config/db-config.properties
@@ -1,9 +1,5 @@
 #Database Connection Properties
 driver=oracle.jdbc.driver.OracleDriver
-url=jdbc:oracle:thin:@localhost:1521:ORCL
+url=jdbc:oracle:thin:@192.168.0.38:1521:XE
 username=sys as sysdba
-<<<<<<< HEAD
-password=rlacl15
-=======
 password=oracle
->>>>>>> 500eec7bc55bdfc131c7f9562c3609eba5df8d6f
