--- a/src/resource/config/db-config.properties
+++ b/src/resource/config/db-config.properties
@@ -1,9 +1,5 @@
 #Database Connection Properties
 driver=oracle.jdbc.driver.OracleDriver
-url=jdbc:oracle:thin:@192.168.0.38:1521:XE
+url=jdbc:oracle:thin:@localhost:1521:ORCL
 username=sys as sysdba
-<<<<<<< HEAD
-password=oracle
-=======
 password=rlacl15
->>>>>>> f8413a2961600767dc8cf5197ab700fef4657adf
