--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -52,6 +52,10 @@
 # \uacf5\uc9c0\uc0ac\ud56d \uae00 \uc0ad\uc81c \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d 
 /notice/notice_delete = kr.or.kosta.shopping.notice.controller.NoticeDeleteController
 
+# \uacf5\uc9c0\uc0ac\ud56d \uae00 \uc218\uc815 \ucc98\ub9ac \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d 
+/notice/notice_modify_proc =  kr.or.kosta.shopping.notice.controller.NoticeModifyProcController
+
+
 #\uc0c1\ud488 \ub9ac\uc2a4\ud2b8 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
 /product/product_list_berger =kr.or.kosta.shopping.product.controller.ProductListController
 
