QnA 수정 삭제 완료

--- a/WebContent/WEB-INF/controllerMapping.properties
+++ b/WebContent/WEB-INF/controllerMapping.properties
@@ -83,7 +83,7 @@
 #QnA \uae00 \uc4f0\uae30 \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
 /qna/qna_write = kr.or.kosta.shopping.qna.controller.QnaWriteController
 
-# QnA \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
+#QnA \ucee8\ud2b8\ub864\ub7ec \ub4f1\ub85d
 /qna/qnaRegistProc= kr.or.kosta.shopping.qna.controller.QnaRegistController
 
 #\uad6c\ub9e4\uc2dc \uc0ac\uc6a9\uc790 \uc815\ubcf4 \uac00\uc838\uc624\uae30
@@ -139,3 +139,12 @@
 
 #\ub85c\uadf8\uc778 \uc2e4\ud328 \ud654\uba74
 /user/loginError = kr.or.kosta.shopping.member.controller.MemberLoginErrorViewController
+
+#QnA \uc0ad\uc81c
+/qna/qna_delete = kr.or.kosta.shopping.qna.controller.QnaDeleteController
+
+#QnA \uc218\uc815\ud558\uae30 \ud654\uba74
+/qna/qna_modify = kr.or.kosta.shopping.qna.controller.QnaModifyViewController
+
+#QnA \uc218\uc815\ud558\uae30
+/qna/qna_modify_proc = kr.or.kosta.shopping.qna.controller.QnaModifyProcController
