--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -25,28 +25,8 @@
       <servlet-class>kr.or.kosta.shopping.common.controller.FrontControllerServlet</servlet-class>
       <init-param>
          <param-name>controllerMapping</param-name>
-	     <!-- 쓰레기네 -->
-	     <!-- 
-	  <param-value>C:/Users/KSH/Documents/카카오톡 받은 파일/biningMallProject/WebContent/WEB-INF/controllerMapping.properties</param-value>
- -->
-         <!-- 광용이꺼 -->
 
-        <!--  <param-value>F:\biningMallproject\WebContent\WEB-INF\controllerMapping.properties</param-value>-->
-
-         <!-- 안상이꺼 -->
-           <param-value>D:/kosta100/workspace/biningMallproject/WebContent/WEB-INF/controllerMapping.properties</param-value>
-
-         <!-- 비닝이꺼 -->
-        <!-- 
-   <param-value>C:/Users/JHB-PC/Desktop/KOSTA/project/binningMallProject/WebContent/WEB-INF/controllerMapping.properties</param-value> 
- -->
-
-   <!--
-        <param-value>C:/Users/JHB-PC/Desktop/KOSTA/project/biningMallproject/WebContent/WEB-INF/controllerMapping.properties</param-value>
-  -->
-          
-          <!-- 성후니 -->
-	     <!-- <param-value>C:/Users/KSH/Documents/카카오톡 받은 파일/biningMallProject/WebContent/WEB-INF/controllerMapping.properties</param-value> -->
+        <param-value>C:\Users\kosta3-20\Documents\git\biningMallproject\WebContent\WEB-INF\controllerMapping.properties</param-value>
 
       </init-param>
    </servlet>
