상품보기 장바구니 이동, 토핑 셀렉트값

--- a/src/resource/config/db-config.properties
+++ b/src/resource/config/db-config.properties
@@ -1,10 +1,5 @@
 #Database Connection Properties
 driver=oracle.jdbc.driver.OracleDriver
-url=jdbc:oracle:thin:@192.168.0.38:1521:XE
+url=jdbc:oracle:thin:@localhost:1521:ORCL
 username=sys as sysdba
-<<<<<<< HEAD
 password=rlacl15
-=======
-password=oracle
-
->>>>>>> d00b6f1fd0ed07c4e368bb68fb7e06aadb6c45fe
