--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -35,7 +35,10 @@
          <!-- 비닝이꺼 -->
       
 
-          <param-value>D:/kosta100/workspace/biningMallproject/WebContent/WEB-INF/controllerMapping.properties</param-value>
+           <param-value>C:/Users/JHB-PC/Desktop/KOSTA/project/binningMallProject/WebContent/WEB-INF/controllerMapping.properties</param-value> 
+
+
+
 
          <!-- 비닝이꺼 -->
    
